--- a/src/css/index.css
+++ b/src/css/index.css
@@ -138,6 +138,27 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  #programari{
+    height: 200px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #e2e0e0;
+  }
+
+#map-container{
+  display: flex;
+  justify-content: space-around;
+}
+
+  #map {
+    height: 580px;
+    width: 80%;
+    
+   
+}
   
 
   #footer{
@@ -170,6 +191,17 @@ a {
       height: 1300px;
     }
     }
+
+    @media screen and (max-width: 767px) {
+      #map{
+        width: 100%;
+      }
+    }
+    @media screen and (min-width: 767px) {
+      #map{
+        width: 80%;
+      }
+    }
   
 
   @media screen and (max-width: 767px) {
@@ -178,6 +210,7 @@ a {
       display: none;
     }
   }
+
 
   @media screen and (min-width: 767px) {
     .mob-meniu{
